--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Move API - Movie Reviews</title>
+    <title>Star Wars</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,6 +13,11 @@
   </head>
   <body>
     <div class="grid-con">
+      <section class="col-span-full">
+        <h1>hi</h1>
+
+      </section>
+      </div>
      
   </body>
 </html>
