--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="grid-con">
       <section class="col-span-full m-col-span-6 l-col-span-6 xl-col-span-6" id="character-box">
         <h2>Characters</h2>
+      <img class="photo">
       </section>
       <section class="col-span-full m-col-span-6 l-col-span-6 xl-col-span-6" id="film-box">
         <h2>Films</h2>
