--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <template id="film-template">
           <section>
-            <h3 class="film-heading"><a></a></h3>
+            <h3 class="film-heading"></h3>
             <p class="film-description"></p>
           </section>
         </template>
