--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       </section>
       <section class="col-span-full m-col-span-6 l-col-span-6 xl-col-span-6" id="character-box">
         <h2>Characters</h2>
-      <img class="photo">
+        <div class="movie-picture-container" class="photo">
+      <img src="" alt="">
+    </div>
       </section>
       <section class="col-span-full m-col-span-6 l-col-span-6 xl-col-span-6" id="film-box">
         <h2>Films</h2>
